Bug 307835 - UI does not reflect actual state of site policy
Summary: UI does not reflect actual state of site policy
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: kcookiejar (other bugs)
Version First Reported In: Git
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Dawit Alemayehu
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-04 12:21 UTC by Christoph Feck
Modified: 2012-10-04 22:17 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Feck 2012-10-04 12:21:56 UTC
To reproduce:

- in cookie settings, click "Change Policy..." for a cookie
- set it to "Accept" and click OK.
- click "Change Policy..." for the same cookie again

Actual result:
- the policy displayed is "Reject"

Expected results
- the policy displayed is "Accept"
Comment 1 Dawit Alemayehu 2012-10-04 22:17:04 UTC
Git commit f1ef7f10cd8ace4ff504796f8e9234f4cd6d70cf by Dawit Alemayehu.
Committed on 04/10/2012 at 23:55.
Pushed by adawit into branch 'master'.

Make the per domain cookie policy configuration dialog refelect any current policy
set for the selected domain.
FIXED-IN: 4.10

M  +63   -43   konqueror/settings/kio/kcookiespolicies.cpp
M  +3    -1    konqueror/settings/kio/kcookiespolicies.h
M  +1    -1    konqueror/settings/kio/kcookiespolicies.ui

http://commits.kde.org/kde-baseapps/f1ef7f10cd8ace4ff504796f8e9234f4cd6d70cf