Make the per domain cookie policy configuration dialog refelect any current policy set for the selected domain.

BUG: 307835
FIXED-IN: 4.10